Added summary of national tournaments and template for upcoming tournaments

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: "Main Page"
 ---
-Hello. This is a website to coordinate quiz bowl in Colorado and provide a central repository of information. More stuff should be added here before the site goes public.
+<p>Hello. This is a website to coordinate quiz bowl in Colorado and provide a central repository of information. More stuff should be added here before the site goes public.</p>
 
 <h2>Blog</h2>
 <ul>
