Added stuff to index and capped line width at 80

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 ---
-title: "Main Page"
+title: "Welcome to Colorado QB!"
 ---
-<p>Hello. This is a website to coordinate quiz bowl in Colorado and provide a central repository of information. More stuff should be added here before the site goes public.</p>
+<p>
+  This site contains information for quiz bowl players and coaches. If you're
+  new to quiz bowl, you   may be curious about <a href="/info/what-is-qb/">what
+    it is</a> and <a href="/info/rules/">how it's played</a>.
+</p>
 
-<h2>Blog</h2>
+<p>
+  If you're a current quiz bowl player, check out our
+  <a href="/tournaments/upcoming/">schedule</a> of upcoming Colorado tournaments
+  and our <a href="/info/resources/">list of quiz bowl resources</a>.
+</p>
+
+<p>
+  Questions? Comments? Concerns? <a href="/more/contact">Contact us!</a>
+</p>
+
+<h2>Our Blog</h2>
 <ul>
   {% for post in site.posts %}
     <li>
