--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 title: "Welcome to Colorado QB!"
 ---
 <p>
-  This site contains information for quiz bowl players and coaches. If you're
-  new to quiz bowl, you   may be curious about <a href="/info/what-is-qb/">what
-    it is</a> and <a href="/info/rules/">how it's played</a>.
+  This site contains information for quiz bowl players and coaches. If
+  you're new to quiz bowl, you may be curious about
+  <a href="/info/what-is-qb/">what it is</a>,
+  <a href="/info/rules/">how it's played</a>, and
+  <a href="/info/start-a-team/">how to start a team at your school</a>.
 </p>
 
 <p>
