--- a/_pages/blog-index.html
+++ b/_pages/blog-index.html
@@ -2,10 +2,13 @@
 title: "Blog Posts"
 permalink: /blog/allposts/
 ---
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-  {% endfor %}
-</ul>
+<i class="fa fa-fw fa-rss-square" aria-hidden="true"></i><a href="{% if site.atom_feed.path %}{{
+	 site.atom_feed.path }}{% else %}{{ '/feed.xml' | absolute_url }}{% endif %}">{{
+	 site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a>
+<br />
+<br />
+{% for post in site.posts %}
+<b><a href="{{ post.url }}">{{ post.title }}</a></b>
+<br />
+<p>{{post.date | date_to_string}}</p>
+{% endfor %}
