--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@ title: "Welcome to Colorado QB!"
 </p>
 
 <h2>Our Blog</h2>
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-  {% endfor %}
-</ul>
+{% for post in site.posts %}
+<b><a href="{{ post.url }}">{{ post.title }}</a></b>
+<br />
+<p>{{post.date | date_to_string}}</p>
+{% endfor %}
