--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 ---
 title: "Welcome to Colorado QB!"
 ---
+
+<p>
+  We started in the summer of 2017, when several members of the CU Boulder team
+  saw a need for a Colorado-specific quizbowl resource center and organizational
+  body, in order to support the state's growing pyramidal quiz bowl circuit.
+  Today, we're an association of college and high school players with an
+  interest in expanding the game.
+</p>
+
 <p>
   This site contains information for quiz bowl players and coaches. If
   you're new to quiz bowl, you may be curious about
