--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ title: "Welcome to Colorado QB!"
   Questions? Comments? Concerns? <a href="/more/contact">Contact us!</a>
 </p>
 
-<h2>Our Blog</h2>
-{% for post in site.posts %}
-<b><a href="{{ post.url }}">{{ post.title }}</a></b>
-<br />
-<p>{{post.date | date_to_string}}</p>
-{% endfor %}
+<h2>CU Boulder Trivia Buffs</h2>
+
+<p>
+
+  
+</p>
