--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@ title: "Welcome to Colorado QB!"
 ---
 
 <p>
-  We started in the summer of 2017, when several members of the CU Boulder team
-  saw a need for a Colorado-specific quizbowl resource center and organizational
-  body, in order to support the state's growing pyramidal quiz bowl circuit.
-  Today, we're an association of college and high school players with an
-  interest in expanding the game. 
+  We are a Colorado-specific quizbowl resource center and organizational
+  body working to support the state's growing pyramidal quiz bowl circuit.
+  Our network of college and high school quiz bowl players, alumni, and coaches 
+  work together to expand the game and send competing teams to tournaments nationwide.
 </p>
 
 <p>
