--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@ title: "Welcome to Colorado QB!"
 <h2>CU Boulder Trivia Buffs</h2>
 
 <p>
+We work in partnership with CU Boulder's own quiz bowl team: the Trivia Buffs! 
+Here you can find details regarding our current team, practice schedule, 
+upcoming tournaments, and general information about the club itself.
+</p>
 
-  
+<p>
+We're always happy to welcome new members! Contact us if interested.
 </p>
